FIX: Align css to reflect AA media queries long practice Phase 2 project requirements

--- a/styles/main.css
+++ b/styles/main.css
@@ -59,3 +59,10 @@ nav a.selected {
 	display: none;
     }
 }
+
+/* Phase 2: Improve header size on landing page */
+@media screen and (max-width: 640px) {
+    header.homepage {
+	height: 220px;
+    }
+}
